// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyAccount: actions Verify temporary password failure 1`] = `
Object {
  "error": "Error to be occured",
  "type": "VERIFY_TEMPORARY_PASSWORD_FAILURE",
}
`;

exports[`VerifyAccount: actions Verify temporary password request 1`] = `
Object {
  "email": "no-reply@blockapps.net",
  "tempPassword": "password",
  "type": "VERIFY_TEMPORARY_PASSWORD_REQUEST",
}
`;

exports[`VerifyAccount: actions Verify temporary password success 1`] = `
Object {
  "isTempPasswordVerified": true,
  "type": "VERIFY_TEMPORARY_PASSWORD_SUCCESS",
}
`;

exports[`VerifyAccount: actions reset error 1`] = `
Object {
  "type": "RESET_ERROR",
}
`;

exports[`VerifyAccount: actions reset temporary password 1`] = `
Object {
  "type": "RESET_TEMPORARY_PASSWORD",
}
`;
